--- a/src/app/ConversationComponents/chat/dialog.component.scss
+++ b/src/app/ConversationComponents/chat/dialog.component.scss
@@ -126,6 +126,8 @@ a{
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+    max-width: 80%;
+    max-height: 80%;
 }
 
 .example-2 .btn-tertiary{color:#555;line-height:40px;width:200px;margin-top:7px;margin-left: 5px;border:2px solid #555}
