--- a/src/app/ConversationComponents/dialogCard/dialog-card.component.html
+++ b/src/app/ConversationComponents/dialogCard/dialog-card.component.html
@@ -2,11 +2,12 @@
 <div *ngIf="true" class="blog-card" routerLink="/dialog/{{dg.dialogId}}">
     <div class="inner-part">
       <label class="img">
-        <img *ngIf="dg.image==null" src='https://www.egalochkina.ru/wp-content/uploads/2018/03/dialog-sokrata.jpg'/>
-        <img *ngIf="dg.image!=null && loading"  [src]="dialogImage"/>
+        <img *ngIf="dg.image==null && dg.type!='private'" src='https://www.egalochkina.ru/wp-content/uploads/2018/03/dialog-sokrata.jpg'/>
+        <img *ngIf="loading"  [src]="dialogImage"/>
+        <img *ngIf="dg.type == 'private' && user?.image == null" src='https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg'/>
       </label>
       <div class="content ">
-        <div class="title">{{dg.name}}</div>
+        <div class="title">{{name}}</div>
         <span>Дата создния: {{dg.creationDate}}</span>
         <span>Дата последнего сообщения: {{dg.lastMessageDate}}</span>
       </div>
