--- a/src/app/UserAndGroupComponents/group-list/group-list.component.html
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.html
@@ -1,9 +1,26 @@
  <body>
   <app-navbar></app-navbar>
   <div id="sidebar">
-        <a mat-raised-button class="ml-2" (click)="openGroupForm()" *ngIf="!searchPanelVisible"><i class="fas fa-plus-circle"></i> Создать группу</a>
-        <p></p>
-        <a mat-raised-button class="ml-2" (click)="openSearchPanel()"><i class="fas fa-search"></i> Поиск</a>
+        <button mat-raised-button class="ml-2" routerLink="/groupCreate" *ngIf="!searchPanelVisible"><i class="fas fa-plus-circle"></i> Создать группу</button>
+        <button mat-raised-button class="ml-2" (click)="openSearchPanel()"><i class="fas fa-search"></i> Поиск</button>
+        <form *ngIf="searchPanelVisible" [formGroup]="groupService.getGroupSearchPanel()" class="mt-5">
+          <h5>Search Group</h5>
+            <div class="form-group container" >
+              <label for="">Group name</label>
+              <input id="groupName" type="text" class="form-control" formControlName="searchName" autocomplete="off" placeholder="Group name">
+              <div *ngIf="groupService.getGroupSearchPanel().controls['searchName'].invalid && groupService.getGroupSearchPanel().controls['searchName'].touched" >
+                <small class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.minlength">name is too short</small>
+                <small  class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.maxlength">name is too long</small>
+              </div>
+              <label  for="sel1">Раздел</label>
+              <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
+                  <option value="">Любой</option>
+                  <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
+              </select>
+            </div>
+            <button class="btn btn-light btn-primary-spacing" (click)="search()">Search</button>
+            <button class="btn btn-dark btn-primary-spacing" (click)="closeSearchPanel()">Cancel</button>
+        </form>
   </div>
   <div id="content">
     <div class="container">
@@ -11,49 +28,5 @@
           <app-group-card [(group)]="group"></app-group-card>
         </ul>
     </div>
-  </div>
-  <div class="blog-card" *ngIf="creationGroupVisible">
-    <div class="inner-part">
-      <form [formGroup]="groupService.getGroupCreationForm()" class="mt-5">
-        <h1>Create Group</h1>
-          <div class="form-group">
-            <label for="">Group name</label>
-            <input id="Name" type="text" class="form-control" formControlName="groupName" autocomplete="off" placeholder="Group name">
-            <div *ngIf="groupService.getGroupCreationForm().controls['groupName'].invalid && groupService.getGroupCreationForm().controls['groupName'].touched" >
-              <small class="form-text text-muted" *ngIf="groupService.getGroupCreationForm().controls['groupName'].errors.minlength">name is too short</small>
-              <small  class="form-text text-muted" *ngIf="groupService.getGroupCreationForm().controls['groupx`Name'].errors.maxlength">name is too long</small>
-            </div>
-            <label  for="sel1">Раздел</label>
-            <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
-                <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
-            </select>
-            <input type="file" name="file" id="file"  (change)="handleFileInput($event.target.files)" multiple accept="image/*" class="input-file"/>
-            <label for="file" class="btn btn-tertiary js-labelFile">
-            </label>
-          </div>
-      </form>
-      <button class="btn btn-light btn-primary-spacing" (click)="createGroup()">Create</button>
-      <button class="btn btn-dark btn-primary-spacing" (click)="closeGroupForm()">Cancel</button>
-    </div>
-  </div>
-  <div *ngIf="searchPanelVisible" class="blog-card1">
-    <form [formGroup]="groupService.getGroupSearchPanel()" class="mt-5">
-      <h1>Search Group</h1>
-        <div class="form-group container" >
-          <label for="">Group name</label>
-          <input id="groupName" type="text" class="form-control" formControlName="searchName" autocomplete="off" placeholder="Group name">
-          <div *ngIf="groupService.getGroupSearchPanel().controls['searchName'].invalid && groupService.getGroupSearchPanel().controls['searchName'].touched" >
-            <small class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.minlength">name is too short</small>
-            <small  class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.maxlength">name is too long</small>
-          </div>
-          <label  for="sel1">Раздел</label>
-          <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
-              <option value="">Любой</option>
-              <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
-          </select>
-        </div>
-        <button class="btn btn-light btn-primary-spacing" (click)="search()">Search</button>
-        <button class="btn btn-dark btn-primary-spacing" (click)="closeSearchPanel()">Cancel</button>
-    </form>
   </div>
  </body>
