--- a/src/app/UserAndGroupComponents/comment-card/comment-card.component.html
+++ b/src/app/UserAndGroupComponents/comment-card/comment-card.component.html
@@ -2,7 +2,8 @@
 <div *ngIf="!deleted" class="blog-card">
     <div class="inner-part">
       <label class="img">
-        <img  src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSaY9UGZkwA_Am-IgAiVJkD0VoluyIJXM8OOi57ioAp5gj5CAkM'/>
+        <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
+        <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
       </label>
       <div class="content" *ngIf="!commentSettingsVisible">
         <div class="title">{{comment.sender.lastName}} {{comment.sender.firstName}}</div>
