--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,13 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
+  
 html{
     overflow-x:hidden;
+   
 }
+
 
 a {
     text-decoration: none;
