--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.html
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.html
@@ -2,11 +2,13 @@
 
     <form [formGroup]="service.getFilterForm()">
      <div class="myrow pt-4">
-            <div class=" col-3 choose_bar d-flex justify-content-end">
-                <mat-button-toggle-group  formControlName="type" name="fontStyle" aria-label="Font Style">
-                    <mat-button-toggle value="ORDER">Я Фрилансер</mat-button-toggle>
-                    <mat-button-toggle  value="FREELANCE">Я Заказчик</mat-button-toggle>
-                </mat-button-toggle-group>    
+            <div class=" col-3 choose_bar d-flex justify-content-end">         
+                <div state='FREELANCE'  [ngClass]="state=='FREELANCE'?'check-button check-button-border':'check-button'" (click)="changeState($event)" >
+                   Я Преподаватель
+                 </div>
+                 <div  state='ORDER' [ngClass]="state=='ORDER'?'check-button check-button-border':'check-button'" (click)="changeState($event)">
+                  Я Студент
+                 </div>
             </div>
             <div class="search_bar col-6">
                 <input type="text" formControlName="searchRow" class="search_input" placeholder="Поиск"/>
