--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.scss
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.scss
@@ -106,3 +106,33 @@
     background: white;
     color: #e74c3c;
     }
+
+
+
+    .check-button
+    {
+        width:50%;
+        padding:7px 0;
+        background-color:white;
+        display:inline-flex;
+        justify-content:center;
+    
+        &:hover
+        {
+            cursor:pointer;
+        }
+    }
+    
+    .check-button-border
+    {
+        border:2px solid #e64927;
+    }
+    
+    .check-buttons
+    {
+      display:flex;
+      width:44vw;
+      justify-content:center;
+      align-items:center; 
+    }
+    
