--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -70,9 +70,17 @@
                                     <span *ngFor="let doc of adv.attachments; let i = index" class="mr-2">
                                       <div (click)="download(doc.key)" ><i class="fas fa-file fontFile"></i></div>
                                       <div class="fontFileName">{{doc.key.split('_')[1]}}</div>
-                                    </span> 
-                    
-                                  </div>                                
+                                    </span>       
+                                  </div>  
+                                  <div *ngIf=" order!=undefined && order.status=='СOMPLETED'" class="mt-3">
+                                    <div class="tittle">Ответ</div>
+                                    <div class="attachments mt-3">                                   
+                                      <span *ngFor="let doc of order.orderDocuments; let i = index" class="mr-2">
+                                        <div (click)="download(doc.documentKey)" ><i class="fas fa-file fontFile"></i></div>
+                                        <div class="fontFileName">{{doc.documentName}}</div>
+                                      </span>       
+                                    </div>  
+                                  </div>                            
                                 </div>
                             </div>
                         </div>
