--- a/src/app/allusers/order-item/order-item.component.html
+++ b/src/app/allusers/order-item/order-item.component.html
@@ -7,8 +7,11 @@
     </div>
     <div class="description">
       <h1>{{order.advertisement.advertisementName}}</h1>
-      <h2 *ngIf="myRole=='ROLE_TEACHER'">Заказчик - <span style="cursor:pointer" routerLink="/userPage/{{order.customerId}}">{{order.customerFIO}}</span></h2>   
-      <h2 *ngIf="myRole=='ROLE_STUDENT'">Преподаватель - <span style="cursor:pointer" routerLink="/userPage/{{order.freelancerId}}" >{{order.freelancerFIO}}</span></h2>        
+      
+
+      <h2 *ngIf="myRole=='ROLE_TEACHER'">Заказчик - <span style="cursor:pointer" routerLink="/userPage/{{order.customerId}}">{{order.customerFIO}} <i routerLink="/dialog/{{order.chatId}}" class=" message far fa-paper-plane"></i> </span></h2>   
+      <h2 *ngIf="myRole=='ROLE_STUDENT'">Преподаватель - <span style="cursor:pointer" routerLink="/userPage/{{order.freelancerId}}" >{{order.freelancerFIO}} <i routerLink="/dialog/{{order.chatId}}" class=" message far fa-paper-plane"></i>
+      </span></h2>        
       <div><span class="title">Cтатус заказа - </span>{{getStatus(order.status)}}</div>
       <div><span class="title">Дата принятия заказа - </span>24.04.2020</div>
       <div><span class="title">Дедлайн - </span>24.04.2020</div>
@@ -22,14 +25,15 @@
         <div> <span class="title">Комментарий - </span>{{order.comment}} </div>
       </div>
       <span *ngIf="order.status=='СOMPLETED' "class="title">Файлы</span>
-      <div *ngIf="order.status=='СOMPLETED'" class="documents">
+
+      <div *ngIf="order.status=='СOMPLETED'" class="documents mb-3">
           <div *ngFor="let doc of order.orderDocuments; let i = index" class="document mr-3">
             <span (click)="download(doc.documentKey,doc.documentName)" style="text-align:center;"><i style="font-size:30px;" class="fas fa-download"></i></span>
-              {{doc.documentName}}
-      
-          </div>
+            <mat-checkbox (click)="deleteClickEvent(doc.documentKey)" class="example-margin">{{doc.documentName}} </mat-checkbox>  
+           </div>
+         
       </div>
-      <div *ngIf="openResultBlock">
+      <div *ngIf="openResultBlock" class="mb-3">
         <div class="form-group mt-3">
           <div class="example-2 mb-3">
               <div class="form-group">
@@ -41,6 +45,7 @@
               </div>
           </div>
       </div>
+      
       <div class="mb-2 all-images">
           <div class="mb-3" *ngFor="let not of allNames; let i = index" (click)="deleteImageFromList(i)">
               <span  matBadge="x"  matBadgeOverlap="false" >{{not}}</span>
@@ -48,9 +53,32 @@
      </div>
       </div>
      
-      <button *ngIf="myRole=='ROLE_TEACHER' && order.nextStatus!=undefined" (click)="changeOrderStatus(order)" class="btn btn-success mt-3" >{{getNextStatus(order.nextStatus)}}</button>
-       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork=='0' && order.status=='СOMPLETED' && !clickRate " (click)="show(order)" class="btn btn-success mt-3"  >Оценить работу</button>
-       <button *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork!='0' && order.status=='СOMPLETED' && !clickRate" (click)="show(order)" class="btn btn-success mt-3" >Переоценить работу</button>
+      
+       
+      <button  (click)="changeOrderStatus(order)"  *ngIf="myRole=='ROLE_TEACHER' && order.nextStatus!=undefined" class="btn btn-success mr-3">
+        <span class="button-text">{{getNextStatus(order.nextStatus)}}</span>
+      </button>
+
+       <button  (click)="show(order)" *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork=='0' && order.status=='СOMPLETED' && !clickRate " class=" mr-3 btn btn-success">
+        <span class="button-text">Оценить</span>
+      </button>
+      
+      <button  (click)="show(order)" *ngIf="myRole=='ROLE_STUDENT' && order.starsForWork!='0' && order.status=='СOMPLETED' && !clickRate" class="mr-3 btn btn-success">
+        <span class="button-text">Переоценить</span>
+      </button>
+
+
+      <button *ngIf="myRole=='ROLE_TEACHER'" (click)="sendAttachments(order)" class="btn btn-success mr-3">
+        <span class="button-text">Добавить файлы</span>
+      </button>
+
+      <button *ngIf="myRole=='ROLE_TEACHER'" (click)="sendAttachments(order)" class="btn btn-success mr-3">
+        <span class="button-text">Удалить файлы</span>
+      </button>
+
+
+
+      
       <div *ngIf="ok" class="rating-area">           
         <input (click)="raitingClick($event,not)"  type="radio" id="star-5" name="rating" value="5">
         <label for="star-5" title="Оценка «5»"></label>	
@@ -66,9 +94,13 @@
       <form *ngIf="ok" class="form-group" [formGroup]="service.getOrderForm()">
         <textarea  formControlName="comment" type="text" class="form-control" id="Input2" rows="4" aria-describedby="emailHelp" placeholder="Оставьте комментарий"></textarea>
       </form>     
-      <div *ngIf="ok" class="button-area">
-        <button type="button b" (click)="sendFeedBack(order) "class="btn btn-success" >Оценить</button>
-      </div>
+     
+
+      <button  (click)="sendFeedBack(order) " *ngIf="ok"  class="btn btn-success">
+        
+        <span class="button-text">Оценить</span>
+      </button>
+
       <p style="cursor:pointer;" routerLink="/adv/{{order.advertisement.advertisementId}}" class="read-more">
         Подробнее
       </p>
