--- a/src/app/userpage2/user-feed-back/user-feed-back.component.html
+++ b/src/app/userpage2/user-feed-back/user-feed-back.component.html
@@ -1,6 +1,8 @@
 <div  class="feedback-block;">
     <div class="comment-info " >
-        <img class="avatar mr-2" src="https://miro.medium.com/max/1200/1*QQuqrtBQOd_XgE7fwwN8BA.jpeg"/>
+        <img class="avatar mr-2" *ngIf="order.customerImageKey!=undefined" src="http://localhost:1234/getuserimg/{{user.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
+        <img   class="avatar mr-2"  *ngIf="order.customerImageKey==undefined" src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
+
         <div class="comment-user-info">
             <span routerLink="/userPage/{{order.customerId}}" style="font-weight:555;cursor:pointer;">{{order.customerFIO}}</span>
                 <span class="rating-result">
