--- a/src/app/allusers/order-item/order-item.component.html
+++ b/src/app/allusers/order-item/order-item.component.html
@@ -72,7 +72,7 @@
         <span class="button-text">Добавить файлы</span>
       </button>
 
-      <button *ngIf="myRole=='ROLE_TEACHER'" (click)="sendAttachments(order)" class="btn btn-success mr-3">
+      <button *ngIf="myRole=='ROLE_TEACHER'" (click)="deleteAttachments()" class="btn btn-success mr-3">
         <span class="button-text">Удалить файлы</span>
       </button>
 
