--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbarx navbar-dark bg-dark">
         <div class="navbar-blocks">
             <div class="navbar-menu">
-                <a *ngIf="isLogin && !isAdmin" mat-raised-button class="mr-2" routerLink="/user/addnewAdvertisement"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
+                <a *ngIf="isLogin && !isAdmin" mat-raised-button [ngClass]="UserInfo.banTime!=undefined ? 'disabled mr-2':'mr-2'" (click)="addNewAdvertisement()"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
                 <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>
                 <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
                 <a  *ngIf="isAdmin" mat-raised-button class="ml-2" routerLink="/admin/rolecontrol">Роли</a>
@@ -28,6 +28,8 @@
               </div>
         </div>
       </nav>
+      <div *ngIf="UserInfo.banTime!=undefined" class="block">
+        Ваша страница заблокирована до {{getBanTime()}}
       </div>
 
 
