--- a/src/app/admin/user-document-item/user-document-item.component.html
+++ b/src/app/admin/user-document-item/user-document-item.component.html
@@ -16,19 +16,17 @@
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
                 <ng-container matColumnDef="document">
-                  <th mat-header-cell *matHeaderCellDef> No. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.documentKey.split('_')[1]}} </td>
+                  <th mat-header-cell *matHeaderCellDef> Сертификат </th>
+                  <td mat-cell *matCellDef="let element" (click)="download(element.documentKey)"> {{element.documentKey.split('_')[1]}} </td>
                 </ng-container>
               
-                <!-- Name Column -->
                 <ng-container matColumnDef="subject">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element">Программирование </td>
+                  <th mat-header-cell *matHeaderCellDef> Предмет</th>
+                  <td mat-cell *matCellDef="let element">{{element.subject}} </td>
                 </ng-container>
-              
-                <!-- Weight Column -->
+
                 <ng-container matColumnDef="button">
-                  <th mat-header-cell *matHeaderCellDef> Weight </th>
+                  <th mat-header-cell *matHeaderCellDef>Дейтсвие</th>
                   <td mat-cell *matCellDef="let element">
                     <button (click)="changeDocument(element)" type="button" class="btn btn-success">
                         <span *ngIf="!element.isValid"> <i class="fas fa-check-circle"></i> Принять &nbsp; &nbsp;</span>
@@ -36,8 +34,6 @@
                     </button> 
                   </td>
                 </ng-container>
-            
-              
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
               </table>
