--- a/src/app/allusers/advertisement/advertisement.component.scss
+++ b/src/app/allusers/advertisement/advertisement.component.scss
@@ -14,6 +14,11 @@
     font-size:13px;
 }
 
+.disabled {
+    opacity: 0.65; 
+    cursor: not-allowed;
+}
+
 a{
     text-decoration:none;
     color:black !important;
