--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,9 @@
               </div>
         </div>
       </nav>
+      <div *ngIf="UserInfo!=undefined && UserInfo.banTime!=undefined" class="block">
+        Ваша страница заблокирована до {{getBanTime()}}
+        </div>
     <div  class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
