--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -5,7 +5,7 @@
 					<div *ngIf="not.notification.type!='DELETE_ADVERTISEMENT' && not.notification.type!='ACCEPTED_CERTIFICATION' && not.notification.type!='REJECTED_CERTIFICATION'">
 						<div class="notify_item"  >
 							<div *ngIf="not.notification.userImageKey!=undefined" class="notify_img">
-								<img src="http://localhost:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
+								<img src="http://95.30.222.140:1234/getuserimg/{{not.notification.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
 							</div>
 							<div *ngIf="not.notification.userImageKey==undefined" class="notify_img">
 								<img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
