--- a/src/app/admin/change-user-properties/change-user-properties2.component.html
+++ b/src/app/admin/change-user-properties/change-user-properties2.component.html
@@ -13,7 +13,7 @@
    </div>
     <div *ngFor="let user of allUsers; let i = index"  class="card m-3">
         <div routerLink="/userPage/{{user.userId}}" class="part1">  
-            <img *ngIf="user.userImageKey!=undefined" src="http://localhost:1234/getuserimg/{{user.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
+            <img *ngIf="user.userImageKey!=undefined" src="http://95.30.222.140:1234/getuserimg/{{user.userImageKey}}" alt="profile_pic" style="width:70px; height:70px; border-radius:50%;">
             <img  *ngIf="user.userImageKey==undefined" src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" alt="profile_pic" style="width:55px">
             <div class="name"> {{user.firstname}} {{user.lastname}}</div>
             <div>{{getRole(user.role.roleName)}}</div>
