--- a/src/app/UserAndGroupComponents/group-page/group-page.component.html
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.html
@@ -1,11 +1,7 @@
   <app-navbar></app-navbar>
   <div id="user-page">
   <div id="user-profile-2" class="user-profile">
-      <div class="tabbable">
-          <div class="tab-content no-border padding-24">
-              <div id="home" class="tab-pane in active">
-                  <div class="row">
-                      <div class="col-xs-12 col-sm-3 center">
+                      <div class="av">
                           <span  *ngIf="group?.image!=undefined && loading" class="profile-picture">
                               <img class="prof" alt=" Avatar" id="avatar2" [src]="groupImage">
                           </span>
@@ -14,72 +10,30 @@
                               <img class="prof" alt=" Avatar" id="avatar2" src="https://mentoringgroup.com/files/images/puzzle-team.jpg">
                           </span>
 
+                          <div class="users">
+                              <div class="widget-box transparent">
 
-
-                      </div><!-- /.col -->
-
-                      <div class="col-xs-12 col-sm-9">
-                          <h4 class="blue">
-                              <span class="middle mr-3">{{group?.name}}</span>
-                          </h4>
-                          <div class="profile-info-name"> Тематика </div>
-                          <div class="profile-info-value">
-                            <span>{{group?.subjectName}}</span>
-                          </div>
-                          <button  class="btn btn-sm btn-block btn-info" (click)="showSetings()" *ngIf="admin">
-                            <i class="fas fa-cog"></i>
-                            <span class="bigger-110">Настройки</span>
-                          </button>
-                          <button  class="btn btn-sm btn-block btn-secondary" routerLink="/dialog/{{group.dialogId}}" *ngIf="subscriber">
-                            <i class="fas fa-comments"></i>
-                            <span class="bigger-110">Чат</span>
-                          </button>
-                          <button  class="btn btn-sm btn-block btn-success" (click)="subscribeGroup()" *ngIf="!subscriber">
-                            <i class="fas fa-check"></i>
-                            <span class="bigger-110">Вступить</span>
-                          </button>
-                          <button  class="btn btn-sm btn-block btn-danger" (click)="leaveGroup()" *ngIf="subscriber">
-                            <i class="fas fa-ban"></i>
-                            <span class="bigger-110">Покинуть</span>
-                          </button>
-                          <button  class="btn btn-sm btn-block btn-success" (click)="notificationOn()" *ngIf="subscriber && !isNotificationsOn">
-                            <i class="fas fa-check"></i>
-                            <span class="bigger-110">Включить уведомления</span>
-                          </button>
-                          <button class="btn btn-sm btn-block btn-danger" (click)="notificationOff()" *ngIf="subscriber && isNotificationsOn">
-                            <i class="fas fa-ban"></i>
-                            <span class="bigger-110"> Выключить уведомления</span>
-                          </button>
-
-                          <button *ngIf="admin" data-toggle="modal" data-target="#uploadModel" class="btn btn-sm btn-block btn-primary">
-                              <i class="ace-icon fa fa-envelope-o bigger-110"></i>
-                              <span class="bigger-110">Обновить фотографию</span>
-                          </button>
+                                  <div class="all-tables mt-3">
+                                      <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
+                                          <mat-button-toggle data-toggle="modal" data-target="#UsersModal" value="Subscribers">Участники</mat-button-toggle>
+                                        </mat-button-toggle-group>
+                                   </div>
+                                          </div>
+                                          <ul id='friend-list'>
+                                            <div *ngFor="let us of showingUsers">
+                                                <app-user-card [(us)]="us" routerLink="/userPage/{{user?.userId}}"></app-user-card>
+                                            </div>
+                                          </ul>
+                                  </div>
                       </div>
-
-
-                        </div>
-                      </div>
-                  </div>
-
-                  <div class="row mt-4">
-                      <div class="col-xs-12 col-sm-3">
-                          <div class="widget-box transparent">
-
-                              <div class="all-tables mt-3">
-                                  <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-                                      <mat-button-toggle data-toggle="modal" data-target="#UsersModal" value="Subscribers">Участники</mat-button-toggle>
-                                    </mat-button-toggle-group>
-                              </div>
-                                      </div>
-                                      <ul id='friend-list'>
-                                        <div *ngFor="let us of showingUsers">
-                                            <app-user-card [(us)]="us" routerLink="/userPage/{{user?.userId}}"></app-user-card>
-                                        </div>
-                                      </ul>
-                            </div>
-                            <div class="col-xs-12 col-sm-6">
                               <div class="post-part">
+                                <h4 class="blue">
+                                    <span class="middle mr-3">{{group?.name}}</span>
+                                </h4>
+                                <div class="profile-info-name"> Тематика </div>
+                                <div class="profile-info-value">
+                                  <span>{{group?.subjectName}}</span>
+                                </div>
                                 <button class="ml-2 btn btn-sm btn-block btn-info" *ngIf="admin && !createPostVisible" (click)="showCreatePost()"><i class="fas fa-plus-circle"></i>Написать пост</button>
                                 <form *ngIf="createPostVisible" [formGroup]="gs.getPostCreateForm()">
                                     <div class="form-group">
@@ -112,9 +66,37 @@
                                     <app-post-card [(post)]="post" [(groupName)]="group.name" [(groupImage)]="groupImage" [(user)]="user" [(admin)]="admin"></app-post-card>
                                 </div>
                               </div>
-                            </div>
-                      </div>
-                  </div>
+                              <div class="bt">
+                                  <button  class="btn btn-sm btn-block btn-info" (click)="showSetings()" *ngIf="admin">
+                                    <i class="fas fa-cog"></i>
+                                    <span class="bigger-110">Настройки</span>
+                                  </button>
+                                  <button  class="btn btn-sm btn-block btn-secondary" routerLink="/dialog/{{group.dialogId}}" *ngIf="subscriber">
+                                    <i class="fas fa-comments"></i>
+                                    <span class="bigger-110">Чат</span>
+                                  </button>
+                                  <button  class="btn btn-sm btn-block btn-success" (click)="subscribeGroup()" *ngIf="!subscriber">
+                                    <i class="fas fa-check"></i>
+                                    <span class="bigger-110">Вступить</span>
+                                  </button>
+                                  <button  class="btn btn-sm btn-block btn-danger" (click)="leaveGroup()" *ngIf="subscriber">
+                                    <i class="fas fa-ban"></i>
+                                    <span class="bigger-110">Покинуть</span>
+                                  </button>
+                                  <button  class="btn btn-sm btn-block btn-success" (click)="notificationOn()" *ngIf="subscriber && !isNotificationsOn">
+                                    <i class="fas fa-check"></i>
+                                    <span class="bigger-110">Включить уведомления</span>
+                                  </button>
+                                  <button class="btn btn-sm btn-block btn-danger" (click)="notificationOff()" *ngIf="subscriber && isNotificationsOn">
+                                    <i class="fas fa-ban"></i>
+                                    <span class="bigger-110"> Выключить уведомления</span>
+                                  </button>
+
+                                  <button *ngIf="admin" data-toggle="modal" data-target="#uploadModel" class="btn btn-sm btn-block btn-primary">
+                                      <i class="ace-icon fa fa-envelope-o bigger-110"></i>
+                                      <span class="bigger-110">Обновить фотографию</span>
+                                  </button>
+                              </div>
              </div>
   </div>
 
