--- a/src/app/UserAndGroupComponents/group-page/group-page.component.scss
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.scss
@@ -123,6 +123,10 @@ table {
     border-bottom: 1px solid #FFF
 }
 
+.bt button{
+  margin: auto;
+}
+
 .profile-info-value>span+span.editable-container:before {
     display: none
 }
@@ -235,6 +239,16 @@ table {
     display: block
 }
 
+.user-profile {
+  display: flex;
+}
+
+.bt {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
 .user-profile .ace-thumbnails li {
     border: 1px solid #CCC;
     padding: 3px;
