--- a/src/app/UserAndGroupComponents/group-page/group-page.component.scss
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.scss
@@ -124,8 +124,10 @@ table {
 }
 
 .bt button{
-  margin: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
+
 
 .profile-info-value>span+span.editable-container:before {
     display: none
@@ -248,6 +250,10 @@ table {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+}
+
+.post-part {
+  min-width: 700px;
 }
 .user-profile .ace-thumbnails li {
     border: 1px solid #CCC;
