--- a/src/app/UserAndGroupComponents/group-page/group-page.component.scss
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.scss
@@ -251,7 +251,8 @@ table {
 }
 
 .bt {
-  width: 100%;
+  min-width: 350px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
