--- a/src/app/ConversationComponents/messageCard/messageCard.component.html
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.html
@@ -1,6 +1,12 @@
 <li *ngIf="!mymessage" class="other">
     <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
     <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
+    <mat-menu #appMenu="matMenu">
+      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Удалить</button>
+      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Редактировать</button>
+      <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
+    </mat-menu>
+    <div mat-icon-button [matMenuTriggerFor]="appMenu">
   <div class="msg" [ngStyle]="{'background': (message.isNoRead || message.readBySomebody==false) ? 'LightBlue' : 'white'}">
     <h6>{{message.sender.name}}</h6>
     <p>{{message.text}}</p>
@@ -13,6 +19,7 @@
         <br>
     </span>
     <p><time>{{message.date}}</time></p>
+  </div>
   </div>
 </li>
 <li *ngIf="mymessage" class="self">
