add menu in message

--- a/src/app/ConversationComponents/messageCard/messageCard.component.html
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.html
@@ -2,8 +2,6 @@
     <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
     <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
     <mat-menu #appMenu="matMenu">
-      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Удалить</button>
-      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Редактировать</button>
       <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
     </mat-menu>
     <div mat-icon-button [matMenuTriggerFor]="appMenu">
@@ -26,8 +24,8 @@
     <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
     <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
     <mat-menu #appMenu1="matMenu">
-      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Удалить</button>
-      <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Редактировать</button>
+      <button mat-menu-item>Удалить</button>
+      <button mat-menu-item>Редактировать</button>
       <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
     </mat-menu>
     <div mat-icon-button [matMenuTriggerFor]="appMenu1">
