add menu in message

--- a/src/app/ConversationComponents/chat/dialog.component.scss
+++ b/src/app/ConversationComponents/chat/dialog.component.scss
@@ -16,6 +16,16 @@ a{
 
 /* M E N U */
 
+.my {
+  position: absolute;
+  right: 30px;
+}
+
+.other {
+  position: absolute;
+  left: 30px;
+}
+
 .menu {
     position: absolute;
     top: 10vh;
