--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -13,7 +13,19 @@
   </div>
   <ol class="chat" #scrollMe [scrollTop]="scrollMe.scrollHeight" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
     <ul *ngFor ='let message of messages'>
-        <app-message-card [(message)]="message" (imageClick)="openImage($event)" [(mymessage)]="message.sender.userId == user.userId" [(isAdvertisment)]="dialog?.type == 'advertisement'"></app-message-card>
+      <mat-menu #appMenu="matMenu" *ngIf="message.sender.userId == user.userId" class="my">
+        <button  mat-menu-item>Удалить</button>
+        <button  mat-menu-item>Редактировать</button>
+        <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
+      </mat-menu>
+      <mat-menu #appMenu="matMenu" *ngIf="message.sender.userId != user.userId" class="other">
+        <button  mat-menu-item>Удалить</button>
+        <button  mat-menu-item>Редактировать</button>
+        <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
+      </mat-menu>
+      <div mat-icon-button [matMenuTriggerFor]="appMenu">
+        <app-message-card [(message)]="message" (imageClick)="openImage($event)" [(mymessage)]="message.sender.userId == user.userId"></app-message-card>
+      </div>
   </ul>
   </ol>
   <div id="Sending" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
