add menu in message

--- a/src/app/ConversationComponents/chat/dialog.component.scss
+++ b/src/app/ConversationComponents/chat/dialog.component.scss
@@ -16,14 +16,8 @@ a{
 
 /* M E N U */
 
-.my {
+.menu {
   position: absolute;
-  right: 30px;
-}
-
-.other {
-  position: absolute;
-  left: 30px;
 }
 
 .menu {
