--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -13,14 +13,9 @@
   </div>
   <ol class="chat" #scrollMe [scrollTop]="scrollMe.scrollHeight" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
     <ul *ngFor ='let message of messages'>
-      <mat-menu #appMenu="matMenu" *ngIf="message.sender.userId == user.userId" class="my">
-        <button  mat-menu-item>Удалить</button>
-        <button  mat-menu-item>Редактировать</button>
-        <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
-      </mat-menu>
-      <mat-menu #appMenu="matMenu" *ngIf="message.sender.userId != user.userId" class="other">
-        <button  mat-menu-item>Удалить</button>
-        <button  mat-menu-item>Редактировать</button>
+      <mat-menu class="menu" #appMenu="matMenu" [ngStyle]="{message.sender.userId == user.userId ? 'right: 30px' : 'left: 30px'}">
+        <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Удалить</button>
+        <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Редактировать</button>
         <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
       </mat-menu>
       <div mat-icon-button [matMenuTriggerFor]="appMenu">
