--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -13,7 +13,7 @@
   </div>
   <ol class="chat" #scrollMe [scrollTop]="scrollMe.scrollHeight" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
     <ul *ngFor ='let message of messages'>
-      <mat-menu class="menu" #appMenu="matMenu" [ngStyle]="{message.sender.userId == user.userId ? 'right: 30px' : 'left: 30px'}">
+      <mat-menu #appMenu="matMenu">
         <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Удалить</button>
         <button *ngIf="message.sender.userId == user.userId" mat-menu-item>Редактировать</button>
         <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
