--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -13,13 +13,7 @@
   </div>
   <ol class="chat" #scrollMe [scrollTop]="scrollMe.scrollHeight" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
     <ul *ngFor ='let message of messages'>
-      <mat-menu #appMenu="matMenu" [ngStyle]="{'float' :message.sender.userId == user.userId ? 'right' : 'left'}">
-        <button *ngIf="message.sender.userId == user.userId" (click)="startSetMessage(message)" mat-menu-item>Редактировать</button>
-        <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
-      </mat-menu>
-      <div mat-icon-button [matMenuTriggerFor]="appMenu">
-        <app-message-card [(message)]="message" (imageClick)="openImage($event)" [(mymessage)]="message.sender.userId == user.userId"></app-message-card>
-      </div>
+        <app-message-card [(type)]="dialog.type" [(message)]="message" (imageClick)="openImage($event)" [(mymessage)]="message.sender.userId == user.userId"></app-message-card>
   </ul>
   </ol>
   <div id="Sending" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
