--- a/src/app/ConversationComponents/messageCard/messageCard.component.html
+++ b/src/app/ConversationComponents/messageCard/messageCard.component.html
@@ -1,6 +1,10 @@
 <li *ngIf="!mymessage" class="other">
     <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
     <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
+    <mat-menu #appMenu="matMenu">
+      <button *ngIf="type == 'advertisement'" mat-menu-item>Пометить как решение</button>
+    </mat-menu>
+    <div mat-icon-button [matMenuTriggerFor]="appMenu">
   <div class="msg" [ngStyle]="{'background': (message.isNoRead || message.readBySomebody==false) ? 'LightBlue' : 'white'}">
     <h6>{{message.sender.name}}</h6>
     <p>{{message.text}}</p>
@@ -14,10 +18,16 @@
     </span>
     <p><time>{{message.date}}</time></p>
   </div>
+  </div>
 </li>
 <li *ngIf="mymessage" class="self">
     <div *ngIf="userImage==null" class="avatar"><img src="https://dontshake.org/media/k2/items/cache/71f67488b0857639cee631943a3fc6fa_XL.jpg" draggable="false"/></div>
     <div *ngIf="userImage!=null" class="avatar"><img [src]="userImage" draggable="false"/></div>
+    <mat-menu #appMenu="matMenu">
+      <button (click)="startSetMessage(message)" mat-menu-item>Редактировать</button>
+      <button *ngIf="type == 'advertisement'" mat-menu-item>Пометить как решение</button>
+    </mat-menu>
+    <div mat-icon-button [matMenuTriggerFor]="appMenu">
   <div class="msg" [ngStyle]="{'background': (message.isNoRead || message.readBySomebody==false) ? 'LightBlue' : 'white'}">
     <h6>{{message.sender.name}}</h6>
     <p>{{message.text}}</p>
@@ -28,5 +38,6 @@
         <button *ngFor="let doc of files; let i = index" (click)="download(doc,fileNames[i])" > <i class="fas fa-file fontFile"> {{fileNames[i]}}</i></button>
     </span>
     <p><time>{{message.date}}</time></p>
+  </div>
   </div>
 </li>
