--- a/src/app/ConversationComponents/chat/dialog.component.scss
+++ b/src/app/ConversationComponents/chat/dialog.component.scss
@@ -159,6 +159,10 @@ a{
   display: flex;
 }
 
+#Sending form div{
+  display: flex;
+}
+
 #Sending input.textarea {
   margin: auto;
   position: absolute;
