--- a/src/app/ConversationComponents/dialogCard/dialog-card.component.html
+++ b/src/app/ConversationComponents/dialogCard/dialog-card.component.html
@@ -8,8 +8,8 @@
       </label>
       <div class="content ">
         <div class="title">{{name}}</div>
-        <span>Дата создния: {{dg.creationDate}}</span>
-        <span>Дата последнего сообщения: {{dg.lastMessageDate}}</span>
+        <span>Дата создния: {{dg.creationDate.split('T')[0]}}</span>
+        <span>Дата последнего сообщения: {{dg.lastMessageDate.split('T')[0]}}</span>
       </div>
       <div class="mr-4 notification">
           <mat-icon class="userInfo cursor" *ngIf="dg.countNotification>0" matBadge={{dg.countNotification}} matBadgeColor="warn"></mat-icon>
