--- a/src/app/UserAndGroupComponents/post-card/post-card.component.html
+++ b/src/app/UserAndGroupComponents/post-card/post-card.component.html
@@ -7,7 +7,7 @@
       </label>
       <div class="content" *ngIf="!postSettingsVisible">
         <div class="title">{{groupName}}</div>
-        <h6>{{post.date.split('T')[0]}}</h6>
+        <h6>{{post.date.split('T')[0]}} {{post.date.split('T')[1].split('.')[0]}}</h6>
         <span>{{post.text}}</span>
         <div class="imag" *ngFor="let img of postImages">
           <img [src]="img"/>
