--- a/src/app/ConversationComponents/dialogCard/dialog-card.component.html
+++ b/src/app/ConversationComponents/dialogCard/dialog-card.component.html
@@ -9,7 +9,7 @@
       <div class="content ">
         <div class="title">{{name}}</div>
         <span>Дата создния: {{crDate}}</span>
-        <span>Дата последнего сообщения: {{mDate]}}</span>
+        <span>Дата последнего сообщения: {{mDate}}</span>
       </div>
       <div class="mr-4 notification">
           <mat-icon class="userInfo cursor" *ngIf="dg.countNotification>0" matBadge={{dg.countNotification}} matBadgeColor="warn"></mat-icon>
